--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+    - name: Run SonarQube
+      run: mvn sonar:sonar -Dsonar.projectKey=${{ secrets.SONARQUBE_PROJECT_KEY }}
+                           -Dsonar.host.url=${{ secrets.SONARQUBE_HOST }}
+                           -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }}
