--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,6 @@ jobs:
       run: mvn -B package --file pom.xml
       
     - name: Run SonarQube
-      run: mvn sonar:sonar -Dsonar.projectKey=${{ secrets.SONARQUBE_PROJECT_KEY }}
-                           -Dsonar.host.url=${{ secrets.SONARQUBE_HOST }}
-                           -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }}
+      run: mvn sonar:sonar -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+                           -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+                           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
