--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,12 +38,12 @@ jobs:
         target: "~/"
         rm: false
 
-#     - name: SSH Remote Commands
-#       uses: appleboy/ssh-action@master
-#       with:
-#         host: ${{ secrets.SSH_HOST }}
-#         username: ${{ secrets.SSH_USERNAME }}
-#         key: ${{ secrets.SSH_KEY }}
-#         port: ${{ secrets.SSH_PORT }}
-#         script_stop: true
-#         script: "./marketgg-gateway/restart.sh"
+    - name: SSH Remote Commands
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        port: ${{ secrets.SSH_PORT }}
+        script_stop: true
+        script: "./marketgg-gateway/restart.sh"
